// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test component: documentView should render correctly '<DocumentView />' when policy content is loaded. 1`] = `
<section
  class="makeStyles-section-1"
>
  <div
    class="MuiContainer-root makeStyles-container-2 MuiContainer-maxWidthLg"
  >
    <div
      class="MuiBox-root MuiBox-root-4"
    >
      <div
        data-aos="fade-down"
      >
        <a
          href="/"
        >
          <button
            class="MuiButtonBase-root MuiIconButton-root makeStyles-icon-5"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </a>
        <hr
          class="MuiDivider-root makeStyles-divider-6"
        />
      </div>
      <div
        data-aos="fade-up"
      >
        <span
          class="MuiTypography-root makeStyles-common-7 makeStyles-paragraph-11 MuiTypography-body1"
        >
          <div>
            <p>
              Policy text
            </p>
          </div>
        </span>
      </div>
    </div>
  </div>
</section>
`;

exports[`test component: documentView should render correctly '<DocumentView />' when showcase content is loaded. 1`] = `
<section
  class="makeStyles-section-34"
>
  <div
    class="MuiContainer-root makeStyles-container-35 MuiContainer-maxWidthLg"
  >
    <div
      class="MuiBox-root MuiBox-root-37"
    >
      <div
        data-aos="fade-down"
      >
        <a
          href="/"
        >
          <button
            class="MuiButtonBase-root MuiIconButton-root makeStyles-icon-38"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </a>
        <hr
          class="MuiDivider-root makeStyles-divider-39"
        />
      </div>
      <div
        data-aos="fade-up"
      >
        <span
          class="MuiTypography-root makeStyles-common-40 makeStyles-paragraph-44 MuiTypography-body1"
        >
          <div>
            <p>
              Showcase text
            </p>
          </div>
        </span>
      </div>
    </div>
  </div>
</section>
`;

exports[`test component: documentView should render correctly '<DocumentView />' when story content is loaded. 1`] = `
<section
  class="makeStyles-section-23"
>
  <div
    class="MuiContainer-root makeStyles-container-24 MuiContainer-maxWidthLg"
  >
    <div
      class="MuiBox-root MuiBox-root-26"
    >
      <div
        data-aos="fade-down"
      >
        <a
          href="/"
        >
          <button
            class="MuiButtonBase-root MuiIconButton-root makeStyles-icon-27"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </a>
        <hr
          class="MuiDivider-root makeStyles-divider-28"
        />
      </div>
      <div
        data-aos="fade-up"
      >
        <span
          class="MuiTypography-root makeStyles-common-29 makeStyles-paragraph-33 MuiTypography-body1"
        >
          <div>
            <p>
              Story text
            </p>
          </div>
        </span>
      </div>
    </div>
  </div>
</section>
`;

exports[`test component: documentView should render correctly '<DocumentView />' when terms content is loaded. 1`] = `
<section
  class="makeStyles-section-12"
>
  <div
    class="MuiContainer-root makeStyles-container-13 MuiContainer-maxWidthLg"
  >
    <div
      class="MuiBox-root MuiBox-root-15"
    >
      <div
        data-aos="fade-down"
      >
        <a
          href="/"
        >
          <button
            class="MuiButtonBase-root MuiIconButton-root makeStyles-icon-16"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </a>
        <hr
          class="MuiDivider-root makeStyles-divider-17"
        />
      </div>
      <div
        data-aos="fade-up"
      >
        <span
          class="MuiTypography-root makeStyles-common-18 makeStyles-paragraph-22 MuiTypography-body1"
        >
          <div>
            <p>
              Terms text
            </p>
          </div>
        </span>
      </div>
    </div>
  </div>
</section>
`;
